set up a decent seed file for testing

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,11 @@
     <%= render 'navbar' %>
     <%= render 'banner' %>
   </div>
-    <%= yield %>
+  <div class="container">
+    <div class="frame-body">
+      <%= render 'spell-cards' %>
+    </div>
+  </div>
   <div class="page-frame-footer">
     <%= render 'footer' %>
   </div>
