--- a/app/assets/stylesheets/components/_body-style.scss
+++ b/app/assets/stylesheets/components/_body-style.scss
@@ -20,3 +20,46 @@
   background-color: lightblue;
   // padding: 16px;
 }
+body {
+  background-color: rgb(250,250,250);
+  color: rgb(40,40,40);
+}
+
+body, h1, h2, h3, p {
+  margin: 0;
+}
+
+ul {
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  display: inline-block;
+}
+
+.content-container {
+  width: 80vw;
+  margin: 0 auto;
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media (max-width: 992px) {
+  .content-container {
+    width: 700px;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media (max-width: 768px) {
+  .content-container {
+    width: 600px;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media (max-width: 576px) {
+  .content-container {
+    width: 300px;
+  }
+}
