--- a/app/views/pages/_spell-cards.html.erb
+++ b/app/views/pages/_spell-cards.html.erb
@@ -4,13 +4,13 @@
       <div class="card">
         <div class="card-header" id="headingOne">
           <h5 class="mb-0">
-            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            <button class="btn btn-link" data-toggle="collapse" data-target="#collapse<%= spell.id %>" aria-expanded="true" aria-controls="collapse<%= spell.id %>">
               <%= spell.name %> Conjuration {School} 0 {Level} Acid {Damage_type}
             </button>
           </h5>
         </div>
 
-        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+        <div id="collapse<%= spell.id %>" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
           <div class="card-body">
             {School} Conjuration
             {Spell Range} 60 feet
