got the routes working that need to be. There are some routes that can/should be removed

--- a/app/views/spells/index.html.erb
+++ b/app/views/spells/index.html.erb
@@ -1,1 +1,14 @@
-  <% render 'spell-cards' %>
+<div class="page-frame-content">
+  <div class="page-frame-header">
+    <%= render './pages/navbar' %>
+    <%= render './pages/banner' %>
+  </div>
+  <div class="container">
+    <div class="frame-body">
+      <%= render './pages/spell-cards' %>
+    </div>
+  </div>
+  <div class="page-frame-footer">
+    <%= render './pages/footer' %>
+  </div>
+</div>
