--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -18,3 +18,8 @@
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
+.banner input::placeholder{
+  font-style: italic;
+  font-weight: thin;
+  color: rgba(0, 0, 0, 0.294);
+}
