--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -5,7 +5,7 @@
     <!--<a class="btn btn-danger" href="#">Join</a>-->
       <%= simple_form_for :search, url: root_path, method: :get do |f| %>
          <div class="search-form-control form-group">
-            <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+            <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="fireball ftw" />
             <button name="button" type="submit" class="btn btn-danger rounded">
                 <i class="fas fa-search"></i> Search
              </button>
