--- a/app/views/pages/_spell-cards.html.erb
+++ b/app/views/pages/_spell-cards.html.erb
@@ -4,13 +4,33 @@
       <div class="card">
         <div class="card-header" id="headingOne">
           <h5 class="mb-0">
-            <button class="btn btn-link" data-toggle="collapse" data-target="#collapse<%= spell.id %>" aria-expanded="true" aria-controls="collapse<%= spell.id %>">
-              <%= spell.name %> | <%= spell.school  %> | Level: <%= spell.level  %> | Damage Type: <%= spell.damage_type  %>
+          <% case spell.school  %>
+          <% when "Abjuration" %>
+            <%= image_tag "abjuration.png", id: "spell-school" %>
+          <% when "Conjuration" %>
+            <%= image_tag "conjuration.png", id: "spell-school" %>
+          <% when "Divination" %>
+            <%= image_tag "divination.png", id: "spell-school" %>
+          <% when "Enchantment" %>
+             <%= image_tag "enchantment.png", id: "spell-school" %>
+          <% when "Evocation" %>
+            <%= image_tag "evocation.png", id: "spell-school" %>
+          <% when "Illusion" %>
+            <%= image_tag "illusion.png", id: "spell-school" %>
+          <% when "Necromancy" %>
+            <%= image_tag "necromancy.png", id: "spell-school" %>
+          <% when "Transmutation" %>
+            <%= image_tag "transmutation.png", id: "spell-school" %>
+          <% else %>
+            <%= image_tag "doge_png.png", id: "spell-school" %>
+          <% end %>
+            <button class="btn btn-link" data-toggle="collapse" data-target="#collapse<%= spell.id %>" aria-expanded="false" aria-controls="collapse<%= spell.id %>">
+            <%= spell.name %> | <%= spell.school  %> | Level: <%= spell.level  %> | Damage Type: <%= spell.damage_type  %>
             </button>
           </h5>
         </div>
 
-        <div id="collapse<%= spell.id %>" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+        <div id="collapse<%= spell.id %>" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
           <div class="card-body">
               <p>School: <%= spell.school  %></p>
               <p>Range: <%= spell.range  %></p>
@@ -24,7 +44,32 @@
               <p><%= spell.desc  %></p>
               <p>Classes: <%= spell.classes  %></p>
               <p>Subclasses: <%= spell.subclasses  %></p>
+              <hr>
+                <ul class="list-group list-group-flush">
+                  <% spell.reviews.each do |review| %>
+                  <li class="list-group-item">
+                    <h4><%= review.content %></h4>
+                    <div class="d-flex justify-content-between">
+                      <h4 class="pl-0">Rating:<% review.rating.times do %>
+                        <i class="fas fa-star" style="color: rgba(255, 255, 0, 0.9);"></i>
+                      <% end %>
+                      <% if 5 - review.rating > 0 %>
+                        <% (5 - review.rating).times do %>
+                          <i class="far fa-star" style="color: rgba(245, 245, 0, 0.897);"></i>
+                        <% end %>
+                      <% end %>
+                      </h4>
+                      <h4>
+                        <%= link_to review_path(review), method: :delete, data: { confirm: "Are you sure you want to delete this review, buddy?" } do %>
+                          <i class="fas fa-times"></i>
+                        <% end %>
+                      </h4>
+                    </div>
+                  </li>
+                  <% end %>
+                </ul>
           </div>
+          <%= link_to 'Add Review', new_spell_review_path(spell), class: "btn btn-success" %>
         </div>
       </div>
     </div>
