--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -1,15 +1,15 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= image_path "frostmaiden.jpg" %>)">
   <div class="container">
     <h1>Find out <strong>which spells</strong> people <strong>are casting</strong>!</h1>
-    <p>See what other people are using in their campaigns!</p>
-    <!--<a class="btn btn-danger" href="#">Join</a>-->
-      <%= simple_form_for :search, url: root_path, method: :get do |f| %>
-         <div class="search-form-control form-group">
-            <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="fireball ftw" />
-            <button name="button" type="submit" class="btn btn-danger rounded">
-                <i class="fas fa-search"></i> Search
-             </button>
-          </div>
-       <% end %>
+      <p>See what other people are using in their campaigns!</p>
+        <%= form_tag(search_page_path, :method => "get",
+        class: 'navbar-form navbar-left') do %>
+        <div class="input-group">
+          <%= search_field_tag :search, params[:search], placeholder: "fireball ftw", class: "form-control" %>
+          <button name="button" type="submit" class="btn btn-danger rounded">
+              <i class="fas fa-search"></i> Search
+          </button>
+        </div>
+    <% end %>
   </div>
 </div>
