--- a/app/views/spells/_spell-cards.html.erb
+++ b/app/views/spells/_spell-cards.html.erb
@@ -1,4 +1,4 @@
-<% @spells = Spell.all %>
+
   <% @spells.each do |spell| %>
     <div id="accordion" class="my-2">
       <div class="card">
@@ -27,6 +27,16 @@
             <button class="btn btn-link" data-toggle="collapse" data-target="#collapse<%= spell.id %>" aria-expanded="false" aria-controls="collapse<%= spell.id %>">
             <%= spell.name %> | <%= spell.school  %> | Level: <%= spell.level  %> | Damage Type: <%= spell.damage_type  %>
             </button>
+            <p>Average Rating:
+              <% spell.average_rating.times do %>
+                <i class="fas fa-star" style="color: rgba(255, 255, 0, 0.9);"></i>
+              <% end %>
+              <% if 5 - spell.average_rating > 0 %>
+                <% (5 - spell.average_rating).times do %>
+                  <i class="far fa-star" style="color: rgba(245, 245, 0, 0.897);"></i>
+                <% end %>
+              <% end %>
+            </p>
           </h5>
         </div>
 
