add OG for Linkedin and thumbnail of rhime maiden

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,11 @@
     <meta name="twitter:image:src" content="<%= meta_image %>">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <!-- LinkedIn Open Graph data-->
+    <meta property='og:title' content='<%= meta_description %>'/>
+    <meta property='og:image' content='<%= meta_image %>'/>
+    <meta property='og:description' content='<%= meta_description %>'/>
+    <meta property='og:url' content='<%= request.original_url %>'/>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
