--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -5,7 +5,7 @@
         <%= form_tag(search_page_path, :method => "get",
         class: 'navbar-form navbar-left') do %>
         <div class="input-group">
-          <%= search_field_tag :search, params[:search], placeholder: "fireball ftw", class: "form-control" %>
+          <%= text_field_tag :query, params[:query], placeholder: "fireball ftw", class: "form-control" %>
           <button name="button" type="submit" class="btn btn-danger rounded">
               <i class="fas fa-search"></i> Search
           </button>
