--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -6,7 +6,7 @@
         class: 'navbar-form navbar-left') do %>
         <div class="input-group">
           <%= text_field_tag :query, params[:query], placeholder: "fireball ftw", class: "form-control" %>
-          <button name="button" type="submit" class="btn btn-danger rounded">
+          <button name="button" value="query" type="submit" class="btn btn-danger rounded">
               <i class="fas fa-search"></i> Search
           </button>
         </div>
