--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container d-flex justify-content-center">
   <div class="card col-6 p-3" style="width: 22rem; margin-top: 50px;">
     <h4><%= @spell.name %></h4>
-    <h6><#%= @spell.desc %></h6>
+    <h6><%= @spell.desc %></h6>
     <%= simple_form_for [@spell, @review] do |f| %>
       <%= f.input :content  %>
       <%= f.input :rating, collection: 0..5, include_blank: false %>
